# python-starter

./: .gitignore  .gitmodules  README.md  pyproject.toml  settings.toml
.swm/: csv.3f34m.sw.md  main-method-for-running-models-on-data.0w1ql.sw.md  sample-swimm-pr-for-warp-team.znoul.sw.md  swimm-test.dmdga.sw.md  swimm.json
python_starter/: helper.py  main.py  python_starter.py
src/: main.py  sample_main_models.py
tests/: test_python_starter.py
