[tool.poetry]
name = "python_starter"
version = "0.1.0"
description = ""
authors = ["elvis kahoro <ekk0809@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "^1.8.2"
DateTime = "^4.3"
rich = "^10.16.1"
numpy = "^1.21.5"
pandas = "^1.3.5"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
